Insertion of static pages completed

--- a/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.html
+++ b/src/app/client/src/app/modules/core/components/space-footer/space-footer.component.html
@@ -12,6 +12,8 @@
                     <p class="p"><a (click)= "gotoContact('policy')">Data and Privacy Policy </a> </p>
                     <p class="p"><a (click)= "gotoContact('termsOfUse')" >Terms of Use </a> </p> 
                     <p class="p"><a (click)= "gotoContact('process')">Grievance Redressal Process </a> </p>
+                    <p class="p"><a (click)= "gotoContact('licensepolicy')" >License Policy </a> </p> 
+                    <p class="p"><a (click)= "gotoContact('assetguidelines')">Asset Guidelines </a> </p>
                   </div>
               </div>
             </div>
