--- a/src/app/client/src/app/modules/public/components/common-license/common-license.component.html
+++ b/src/app/client/src/app/modules/public/components/common-license/common-license.component.html
@@ -14,8 +14,38 @@
         </div>
       </div>
      
-      <p class="text pt-5 text-center fs-2">Coming Soon! </p>
+     <!-- <p class="text pt-5 text-center fs-2">Coming Soon! </p> -->
          <!-- <p class="text pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
          <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
+ <div class="container">
 
+    <p>Any or all Assets (as defined in the Terms of Use) available herein at sb2.sunbird.org/space/
+            on the SPace Portal are uploaded or linked by Creators (as defined in the Terms of Use). We
+            at EkStep Foundation (the “ Foundation ”), take intellectual property infringement matters
+            very seriously and we take all reasonable steps necessary to ensure that the Assets
+            uploaded or linked by Creators do not violate the applicable laws including infringement of
+            third party intellectual property rights. In the event, you feel that any Asset on the SPace
+            Portal infringes upon any third party intellectual property rights or violates any applicable
+            law including but not limited to Information Technology (Intermediaries Guidelines) Rules,
+            2011, please write to Grievance Redressal Officer of EkStep Foundation at
+            [ space@societalplatform.org ] with the subject ‘SPace Grievance Issue’ . Include the following
+            details in the email:</p>
+    <ol type="a">
+        <li>
+                Your name and address
+        </li>
+        <li>Name of the organization you represent (if applicable)</li>
+        <li>Link to the asset on the SPace portal which allegedly infringes upon third party
+                intellectual property rights or any applicable laws;</li>
+        <li>Source of the third-party intellectual property being infringed (please provide us with the
+                link to the source being infringed, if the source is available online or the details of the book or
+                the excerpt or journal or the material comprising such third-party intellectual property and
+                the details of the author whose intellectual property rights are being allegedly infringed);
+                and</li>
+        <li>A brief description of the type of infringement;</li>
+        <li>Any other information you wish to provide us with.</li>
+    </ol>
+    <p>Upon receipt of a complaint in the manner set out above, the Foundation reserves the right
+            to remove the Asset, in question, from the SPace Portal within 14 (fourteen) business days.</p>
+ </div>
   </section>
