--- a/src/app/tenant/space/about.html
+++ b/src/app/tenant/space/about.html
@@ -133,7 +133,9 @@
                      <p class="p"><a href="space@societalplatform.org" style="font-family: 'Muli', sans-serif;" target="_blank" class=""></a>   email: space@societalplatform.org</p> -->
 										 <p class="p"><a onclick="footer('policy')">Data and Privacy Policy </a> </p>
 										 <p class="p"> <a onclick="footer('termsOfUse')" >Terms of Use </a> </p>
-										 <p class="p"> <a onclick="footer('process')">Grievance Redressal Process </a> </p>
+                                         <p class="p"> <a onclick="footer('process')">Grievance Redressal Process </a> </p>
+                                         <p class="p"> <a onclick="footer('licensepolicy')">License Policy </a> </p>
+										 <p class="p"> <a onclick="footer('assetguidelines')">Asset Guidelines </a> </p>
                                           </div>
                                       </div>
                             </div>
