--- a/src/app/client/src/app/modules/workspace/components/workspacesidebar/workspacesidebar.component.html
+++ b/src/app/client/src/app/modules/workspace/components/workspacesidebar/workspacesidebar.component.html
@@ -6,7 +6,7 @@
 <div class="publicmenusection ui secondary vertical menu">
   <a  appTelemetryInteract [telemetryInteractEdata]="setInteractData('create-button')" *ngIf='permissionService.permissionAvailable' appPermission [permission]='createRole' class="item" [routerLink]="['create']" routerLinkActive="active" suiPopup popupText="Create Resource, Course, Book, Collection, Lesson Plan or Upload"
   [popupPlacement]="'right'">
-      {{resourceService?.frmelmnts?.snav?.start}}
+      {{resourceService?.frmelmnts?.btn?.create}}
     </a>
   <a appTelemetryInteract [telemetryInteractEdata]="setInteractData('allmycontents-button')"  *ngIf='permissionService.permissionAvailable' [class.active]="router.isActive('/workspace/content/allcontent') " 
   appPermission [permission]='allContentRole' class="item" [routerLink]="['allcontent',1]" suiPopup popupText="{{resourceService?.frmelmnts?.lbl?.viewallcontent}}"
