--- a/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
@@ -15,10 +15,10 @@
 
                 </div>
                 <div class="col-sm-7 pr-30 res-para">
-                    <p *ngIf="assetDetail?.sector" class="float-right">Sector :
+                    <p *ngIf="assetDetail?.gradeLevel" class="float-right">Sector :
                         <span>
                             <!-- <li *ngFor="let hero of assetDetail?.sector; let first = first;let last = last"> -->
-                             <li>   {{ assetDetail?.sector }} 
+                             <li>   {{ assetDetail?.gradeLevel }} 
                                  <!-- <span *ngIf="!last && assetDetail?.sector.length!=1"> ,</span> -->
                             </li>
                         </span>
@@ -46,7 +46,7 @@
                 </div>
             </div>
 
-            <p *ngIf="assetDetail?.assetType" class="card-text">Asset Type : {{assetDetail?.assetType}}
+            <p *ngIf="assetDetail?.gradeLevel" class="card-text">Asset Type : {{assetDetail?.board}}
             </p>
             <!-- <p class="card-text" *ngIf="assetDetail?.topic">Category : <span>
                     <li *ngFor="let hero of assetDetail?.topic; let first = first;let last = last">
@@ -66,7 +66,7 @@
              <p class="card-text" *ngIf="assetDetail?.mimeType === 'text/x-url' && assetDetail?.link.slice(0,4) !== 'http' ">Link:
                  <a href="http://{{assetDetail?.link}}" target="_blank">{{assetDetail?.link}} </a>
             </p>
-            <p class="card-text">Submitted By : {{ assetDetail?.submittedBy }}@{{ assetDetail?.creators }}</p>
+            <p class="card-text">Submitted By : {{ assetDetail?.creator }}@{{ assetDetail?.creators }}</p>
             <p class="card-text" *ngIf="assetDetail?.lastSubmittedOn">Submitted Date : {{assetDetail?.lastSubmittedOn | dateFormat}}</p>
 
 
