--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -14,19 +14,19 @@
     <div in-view-item *ngFor="let content of allContent;let i = index;" [id]="i" [data]="content"
       class="col-md-4 py-3 pl-10">
       <div *ngIf="content">
-        <div class="card mb-5"  (click)="navigateToDetailsPage(content?.identifier, content?.status, $event, content?.source)">
+        <div class="card mb-5"  (click)="navigateToDetailsPage(content?.identifier, content?.status, $event, content?.link)">
 
           <div class="card-header">
             <div class="row">
-                <div class="thick-gray-border sprite knowledgeimg" *ngIf="content?.assetType === 'Knowledge'">
+                <div class="thick-gray-border sprite knowledgeimg" *ngIf="content?.board === 'Knowledge'">
                   </div>
-                  <div class="thick-gray-border sprite hardwareimg" *ngIf="content?.assetType === 'Hardware'">
+                  <div class="thick-gray-border sprite hardwareimg" *ngIf="content?.board === 'Hardware'">
                   </div>
-                  <div class="thick-gray-border  sprite softwareimg" *ngIf="content?.assetType === 'Software'">
+                  <div class="thick-gray-border  sprite softwareimg" *ngIf="content?.board === 'Software'">
                   </div>
-                  <div class="thick-gray-border  sprite processimg" *ngIf="content?.assetType === 'Process'">
+                  <div class="thick-gray-border  sprite processimg" *ngIf="content?.board === 'Process'">
                   </div>
-                  <div class="thick-gray-border  sprite dataimg" *ngIf="content?.assetType === 'Data'">
+                  <div class="thick-gray-border  sprite dataimg" *ngIf="content?.board === 'Data'">
                   </div>
                   <div class="col-sm-8">
                       <div class="text-light pt-3">
@@ -44,7 +44,7 @@
              <p class="creator mb-0">Created By : {{content?.creators}}</p>
              <!-- <p class="creator mb-0">Country : {{content?.region}}</p> -->
              <p class="creator mb-0"> Created Year: {{content?.year}}</p>
-             <p class="creator mb-0" id="link" *ngIf="content?.source">Link : {{content?.source}}</p>
+             <p class="creator mb-0" id="link" *ngIf="content?.link">Link : {{content?.link}}</p>
             <div class="card-text1">{{content?.description | titlecase | slice:0:60}}<span *ngIf="content?.description && content.description?.length > 60">...</span></div>
             
             <div class="d-flex justify-content-center mt-30">
