--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.scss
@@ -213,3 +213,10 @@ i.fas.fa-database.fa-lg {
 a:hover {
   text-decoration: none;
 }
+.contentlink{
+  color:#007bff;
+}
+.contentlink:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
