--- a/src/app/client/src/app/modules/shared/components/space-card/space-card.component.scss
+++ b/src/app/client/src/app/modules/shared/components/space-card/space-card.component.scss
@@ -166,3 +166,10 @@ hr {
   margin-bottom: 2px;
   margin-top: 2px;
 }
+.contentlink{
+  color:#007bff;
+}
+.contentlink:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
