--- a/src/app/tenant/sunbirded/index.html
+++ b/src/app/tenant/sunbirded/index.html
@@ -81,7 +81,7 @@
             <nav class="navbar-collapse collapse menu navbar-right" id="menu" aria-expanded="true">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html#about" title="About"><span>About</span></a></li>
-                    <li><a href="index.html#contact" title="Contact"><span>Contact</span></a></li>
+                    <li><a href="/sunbirded/explore-courses" title="Contact"><span>Explore</span></a></li>
                     <li><a href="/learn" title="LOGIN"><span>Login</span></a></li>
                 </ul>
             </nav>
