sunbirded related fixes,courseframeworkid issue fix

--- a/src/app/client/src/app/modules/public/module/library-content/components/explore-library/explore-library.component.html
+++ b/src/app/client/src/app/modules/public/module/library-content/components/explore-library/explore-library.component.html
@@ -13,7 +13,7 @@
                   </p>
               </div>
               <div class="ui right floated header">
-                    <h5 _ngcontent-c22="" apptelemetryinteract="" class="ui basic icon circular button " tabindex="0"  [routerLink]="['/sbwb/explore-library']"><i _ngcontent-c22="" class="ui remove icon"></i></h5>
+                    <h5 _ngcontent-c22="" apptelemetryinteract="" class="ui basic icon circular button " tabindex="0"  [routerLink]="['/'+slug+'/explore-library']"><i _ngcontent-c22="" class="ui remove icon"></i></h5>
             </div>
           </div>
           <div class="ui clearing segment content-player-header search-content-header" *ngIf="!showLoader && contentList.length === 0">
@@ -23,7 +23,7 @@
                 </p>
             </div>
             <div class="ui right floated header">
-                    <h5 _ngcontent-c22="" apptelemetryinteract="" class="ui basic icon circular button " tabindex="0"  [routerLink]="['/sbwb/explore-library']"><i _ngcontent-c22="" class="ui remove icon"></i></h5>
+                    <h5 _ngcontent-c22="" apptelemetryinteract="" class="ui basic icon circular button " tabindex="0"  [routerLink]="['/'+slug+'/explore-library']"><i _ngcontent-c22="" class="ui remove icon"></i></h5>
             </div>
         </div>
       </div>
