--- a/src/app/client/src/app/modules/public/components/blog/blog.component.html
+++ b/src/app/client/src/app/modules/public/components/blog/blog.component.html
@@ -1,4 +1,4 @@
-<section>
+<section [appTelemetryImpression]="telemetryImpression">
     <div class="jumbotron jumbotron-fluid cimage" style="height:16rem">
         <div class="container">
             <div class="row mb-4">
