--- a/src/app/client/src/app/modules/space-workspace/components/adduser/adduser.component.html
+++ b/src/app/client/src/app/modules/space-workspace/components/adduser/adduser.component.html
@@ -1,4 +1,4 @@
-<div class="containner">
+<div class="containner" [appTelemetryImpression]="telemetryImpression">
   <div class="row justify-content-center pt-10 pb-20 style">
       <div class="add_user" *ngIf="enableadduser">
         <div class="card justify-content">
