--- a/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/asset-detail-page/asset-detail-page.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 mb-50" *ngIf = "!showLoader">
+<div class="container mt-5 mb-50" *ngIf = "!showLoader" [appTelemetryImpression]="telemetryImpression">
     <div class="card">
         <div class="card-header text-center text-light">
             <div class="row mt-15">
