--- a/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
+++ b/src/app/client/src/app/modules/myassets/components/myassest-page/myassest-page.component.html
@@ -1,3 +1,4 @@
+<div [appTelemetryImpression]="telemetryImpression">
 <app-content-filter *ngIf="!route.isActive('myassets/create', true) && !route.isActive('upForReview', true) " ></app-content-filter>
 
 <div class="container" *ngIf="!route.isActive('myassets/create', true )">
@@ -123,3 +124,4 @@
   *ngIf="showLockedContentModal"></app-contentlock-info-popup>
 
 <router-outlet></router-outlet>
+</div>
