--- a/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.html
+++ b/src/app/client/src/app/modules/myassets/components/space-data-driven/space-data-driven.component.html
@@ -1,5 +1,5 @@
 
-<div class="container mt-2">
+<div class="container mt-2" [appTelemetryImpression]="telemetryImpression">
     <h4>Add a New Asset</h4>
     <hr>
     <form class="ui form">
