--- a/src/app/client/src/app/modules/public/components/about-us/about-us.component.html
+++ b/src/app/client/src/app/modules/public/components/about-us/about-us.component.html
@@ -34,7 +34,7 @@
 		</script> -->
 
 
-<section>
+<section [appTelemetryImpression]="telemetryImpression">
 	<div class="jumbotron jumbotron-fluid cimage" style="height:16rem">
 		<div class="container">
 			<div class="row mb-4">
