--- a/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
+++ b/src/app/client/src/app/modules/public/module/explore/components/explore-detail-page/explore-detail-page.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5 mb-30">
+<div class="container mt-5 mb-30" [appTelemetryImpression]="telemetryImpression">
   <div class="card">
     <div class="card-header text-center text-light">
       <div class="row mt-15">
