--- a/src/app/client/src/app/modules/resource/components/resource/resource.component.html
+++ b/src/app/client/src/app/modules/resource/components/resource/resource.component.html
@@ -1,13 +1,14 @@
-<app-prominent-filter [pageId]="'resource-page'" *ngIf="initFilters && slug !== 'space'" [filterEnv]="filterType" [ignoreQuery]="['key']"
+<div  [appTelemetryImpression]="telemetryImpression">
+<app-prominent-filter [pageId]="'sharedassets'" *ngIf="initFilters && slug !== 'space'" [filterEnv]="filterType" [ignoreQuery]="['key']"
   [accordionDefaultOpen]=true [isShowFilterLabel]=true [showSearchedParam]=true [isShowFilterLabel]=true
   [hashTagId]="hashTagId" (prominentFilter)="getFilters($event)"></app-prominent-filter>
 
- <app-space-prominent-filter [pageId]="'resource-page'" *ngIf="initFilters && slug === 'space'" [filterEnv]="filterType" [ignoreQuery]="['key']"
+ <app-space-prominent-filter [pageId]="'sharedassets'" *ngIf="initFilters && slug === 'space'" [filterEnv]="filterType" [ignoreQuery]="['key']"
   [accordionDefaultOpen]=true [isShowFilterLabel]=true [showSearchedParam]=true [isShowFilterLabel]=true [slugInfo]="slug"
   [hashTagId]="hashTagId" (prominentFilter)="getFilters($event)"></app-space-prominent-filter>
 <!--other org page section !-->
 <div class="ui container mt-8" *ngIf="slug !=='space'">
-  <div [appTelemetryImpression]="telemetryImpression" *ngIf="!showLoader" class="ui grid stackable my-0">
+  <div *ngIf="!showLoader" class="ui grid stackable my-0">
     <div class="twelve wide column" *ngFor="let section of pageSections;let last = last"
       [ngClass]="{'last mb-30':last}">
       <app-page-section (visits)="prepareVisits($event)" (playEvent)="playContent($event)" [section]="section" [slug]="slug" *ngIf="slug !== 'space'"
@@ -40,3 +41,4 @@
       </div>
     </div>
 <!--space org page section ended-->
+</div>
