--- a/src/app/client/src/app/modules/space-workspace/components/viewuser/viewuser.component.html
+++ b/src/app/client/src/app/modules/space-workspace/components/viewuser/viewuser.component.html
@@ -1,4 +1,4 @@
-<div id="responsive-table">
+<div id="responsive-table" [appTelemetryImpression]="telemetryImpression">
   <table class="table table-hover" id="res-table">
     <thead>
       <tr>
