--- a/src/app/client/src/app/modules/space-workspace/components/workspace/workspace.component.html
+++ b/src/app/client/src/app/modules/space-workspace/components/workspace/workspace.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="ui container">
+<div class="ui container" [appTelemetryImpression]="telemetryImpression">
     <div class="ui stackable grid mt-30">
       <div class="three wide column pt-0">
 <div class="publicmenusection ui secondary vertical menu">
