--- a/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.html
+++ b/src/app/client/src/app/modules/spacehome/component/space-main-home/space-main-home.component.html
@@ -1,3 +1,4 @@
+<div [appTelemetryImpression]="telemetryImpression">
 <div class="userloggedin">
     <div class="item active">
         <div class="thumbnail text-center" >
@@ -21,6 +22,7 @@
         </div>
     </div>
 
+</div>
 </div>
 </div>
 </div>
