changes regard to notification in space

--- a/src/app/client/src/app/modules/public/components/common-license/common-license.component.html
+++ b/src/app/client/src/app/modules/public/components/common-license/common-license.component.html
@@ -19,7 +19,7 @@
          <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
  <div class="container">
 
-    <p>Any or all Assets (as defined in the Terms of Use) available herein at sb2.sunbird.org/space/
+    <p class="text">Any or all Assets (as defined in the Terms of Use) available herein at sb2.sunbird.org/space/
             on the SPace Portal are uploaded or linked by Creators (as defined in the Terms of Use). We
             at EkStep Foundation (the “ Foundation ”), take intellectual property infringement matters
             very seriously and we take all reasonable steps necessary to ensure that the Assets
@@ -45,7 +45,7 @@
         <li>A brief description of the type of infringement;</li>
         <li>Any other information you wish to provide us with.</li>
     </ol>
-    <p>Upon receipt of a complaint in the manner set out above, the Foundation reserves the right
+    <p class="text">Upon receipt of a complaint in the manner set out above, the Foundation reserves the right
             to remove the Asset, in question, from the SPace Portal within 14 (fourteen) business days.</p>
  </div>
   </section>
