--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.html
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.html
@@ -18,7 +18,7 @@
            <!-- <p class="text pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
            <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
            <div class="container">
-              <p>
+              <p class="text">
                    The EkStep Foundation (the “ Foundation ”) believes that open Assets i.e. Asset that is
                    available free and for public use provide immense opportunities for improving access to
                    scarce resources to create solutions and programs for various societal challenges. Open
@@ -26,29 +26,29 @@
                    license permitted. Source material is given appropriate credit and attribution, in accordance
                    with the terms of its license. Accordingly, the Foundation follows the principles of open
                    Assets shared as public goods on its SPace Portal. </p>
-                 <p>Defined terms that are not defined here shall have the meaning ascribed to them in the
+                 <p class="text">Defined terms that are not defined here shall have the meaning ascribed to them in the
                    Terms of Use.</p>
-                  <p><b> What are the license options? </b></p>
-                 <p>  An Asset uploaded or linked on the SPace Portal can either be a piece of content or a
+                  <p class="text"><b> What are the license options? </b></p>
+                 <p class="text">  An Asset uploaded or linked on the SPace Portal can either be a piece of content or a
                    software code as more clearly defined in the Terms of Use. The licenses applicable for
                    different types of Assets are as follows: </p>
-               <p><b> 1. Content based Asset</b></p>
-                  <p> All content Assets on the SPace Portal are licensed under the Creative Commons license
+               <p class="text"><b> 1. Content based Asset</b></p>
+                  <p class="text"> All content Assets on the SPace Portal are licensed under the Creative Commons license
                    framework - CC-BY (4.0) , CC-BY-SA (4.0) , CC-BY-NC (4.0) and CC-BY-ND (4.0) . Creative
                    commons licenses allow the creators to retain copyright while allowing others to copy,
                    distribute and make some use of the work under conditions specified for each license type,
                    including attribution. Anyone can use a content Asset available on the SPace Portal for their
                    work so long as they are adhering to the requirements of the Creative Commons license as
                    chosen by the Creator.</p>
-                 <p><b>  2. Software based Asset</b></p>
-                  <p> The SPace Portal requires that all software Assets are licensed under either of the license
+                 <p class="text"><b>  2. Software based Asset</b></p>
+                  <p class="text"> The SPace Portal requires that all software Assets are licensed under either of the license
                    options below:</p>
                  <ul> <li> ● MIT License</li>
-                   <p>A software Asset can be licensed under MIT License which is a permissive-free
+                   <p class="text">A software Asset can be licensed under MIT License which is a permissive-free
                    software license originating at the Massachusetts Institute of Technology.
                    Link to the license is available here - MIT license</p>
                  <li>  ● Apache License </li>
-                  <p> A software Asset can also be licensed under the Apache License which is a
+                  <p class="text"> A software Asset can also be licensed under the Apache License which is a
                    permissive-free software license written by the Apache Software Foundation.
                    Link to the license is available here - Apache license </p>
                </ul>
