--- a/src/app/client/src/app/modules/public/components/blog/blog.component.html
+++ b/src/app/client/src/app/modules/public/components/blog/blog.component.html
@@ -16,7 +16,7 @@
     <!-- <p class="text pt-5 text-center fs-2">Coming Soon! </p>-->
     <!-- <p class="text pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
     <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
-    <div class="container">
+    <div class="container text">
         <p>EkStep Foundation (the “ Foundation ”), a not-for-profit company registered under the Indian
             Companies Act 2013, having its office at no 85, 7th Cross, Koramangala 4th Block,
             Bangalore 560034, owns and operates the SPace (Societal Platform Assets Collaboration
