--- a/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.html
+++ b/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.html
@@ -18,7 +18,7 @@
          <!-- <p class="text pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
          <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
 
-<div class="container">
+<div class="container text">
     <p>This Terms of Use (“ Terms of Use ”/ “ Terms ”) governs the “User(s)” (as defined below) and
 the “Creator(s)” (as defined below) whenUsing the SPace (Societal Platform Assets
 Collaboration Environment) portal (“ SPace Portal” ) being offered by EkStep Foundation ( the
