--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -21,6 +21,7 @@
     display: block;
     font-size: 17px;
     font-family: 'Muli', sans-serif;
+    line-height: 2em;
   }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
