--- a/src/app/tenant/sunbirded/index.html
+++ b/src/app/tenant/sunbirded/index.html
@@ -143,10 +143,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-7 col-xxs-12 padding10">
-                    <address><span>Email: <a href="mailto:mscert.Sunbird@gmail.com" class="text-white" target="_top" title="Contact Us">mscert.Sunbird@gmail.com</a></span></address>
+                    <!-- <address><span>Email: <a href="mailto:mscert.Sunbird@gmail.com" class="text-white" target="_top" title="Contact Us">mscert.Sunbird@gmail.com</a></span></address> -->
                 </div>
                 <div class="col-xs-5 col-xxs-12 text-right padding10">
-                    <span>&copy; 2018, Sunbird</span>
+                    <span>&copy; 2019, Sunbird</span>
                 </div>
             </div>
         </div>
