--- a/src/app/client/src/app/modules/public/components/assetguidelines/assetguidelines.component.html
+++ b/src/app/client/src/app/modules/public/components/assetguidelines/assetguidelines.component.html
@@ -16,7 +16,7 @@
   <!-- <p class="text pt-5 text-center fs-2">Coming Soon! </p> -->
   <!-- <p class="text pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
   <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
-  <div class="container">
+  <div class="container text">
     <p> The purpose of this document is to provide preliminary guidelines for Creators and
       Reviewers to ensure that the quality of the Assets uploaded and linked onto the SPace
       Portal meet the following fundamental quality criteria.</p>
