--- a/src/app/client/src/app/modules/public/components/assetguidelines/assetguidelines.component.scss
+++ b/src/app/client/src/app/modules/public/components/assetguidelines/assetguidelines.component.scss
@@ -22,10 +22,17 @@
     font-size: 17px;
     font-family: 'Muli', sans-serif;
   }
+  .text p {
+    line-height: 2em;
+  }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
     background-size: cover;
     background-repeat: no-repeat;
+  }
+  li {
+    line-height: 2em;
+    font-size: 14px;
   }
   ul li{
       margin-bottom: 17px;
