--- a/src/app/client/src/app/modules/public/components/blog/blog.component.css
+++ b/src/app/client/src/app/modules/public/components/blog/blog.component.css
@@ -22,6 +22,13 @@
     font-size: 17px;
     font-family: 'Muli', sans-serif;
   }
+  .text p {
+    line-height: 2em;
+  }
+  li {
+    line-height: 2em;
+    font-size: 14px;
+  }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
     background-size: cover;
