--- a/src/app/client/src/app/modules/public/components/common-license/common-license.component.html
+++ b/src/app/client/src/app/modules/public/components/common-license/common-license.component.html
@@ -17,7 +17,7 @@
      <!-- <p class="text pt-5 text-center fs-2">Coming Soon! </p> -->
          <!-- <p class="text pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
          <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
- <div class="container">
+ <div class="container text">
 
     <p class="text">Any or all Assets (as defined in the Terms of Use) available herein at sb2.sunbird.org/space/
             on the SPace Portal are uploaded or linked by Creators (as defined in the Terms of Use). We
