--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.html
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.html
@@ -17,7 +17,7 @@
        <!-- <p class="text pt-5 text-center fs-2">Coming Soon! </p> -->
            <!-- <p class="text pt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
            <!-- <p class="text pb-15">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit sint, tempora alias rem tenetur minima incidunt natus consequuntur aliquam ea velit ad unde illum perspiciatis nostrum tempore molestiae recusandae magnam?</p> -->
-           <div class="container">
+           <div class="container text">
               <p class="text">
                    The EkStep Foundation (the “ Foundation ”) believes that open Assets i.e. Asset that is
                    available free and for public use provide immense opportunities for improving access to
