--- a/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.html
+++ b/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.html
@@ -182,12 +182,12 @@ of any Assets made available on or linked through the SPace Portal. We shall not
 held responsible for any offensive or unlawful Asset posted, transmitted, sent or
 communicated through the SPace Portal.</p>
 <p><b>4. DISCLAIMER</b></p>
-<p>THE FOUNDATION PROVIDES THE SPace PORTAL ON AN "AS IS" BASIS AND
-GRANTS NO WARRANTIES OF ANY KIND WITH RESPECT TO THE SPace PORTAL.
-THE FOUNDATION SPECIFICALLY DISCLAIMS ANY IMPLIED WARRANTIES OF
-FITNESS FOR A PARTICULAR PURPOSE OR NON-INFRINGEMENT. ACCESS AND
-USE OF THE SPace PORTAL (INCLUDING ANY ASSET OR INFORMATION
-AVAILABLE ON/THROUGH THE SPace PORTAL) IS ENTIRELY AT YOUR OWN RISK.</p>
+<p>The foundation provides the space portal on an "as is" basis and
+    grants no warranties of any kind with respect to the space portal.
+    the foundation specifically disclaims any implied warranties of
+    fitness for a particular purpose or non-infringement. access and
+    use of the SPace portal (including any asset or information
+    available on/through the space portal) is entirely at your own risk.</p>
 <p><b>5. INDEMNITY</b></p>
 <p>You hereby agree to keep and hold the Foundation, its directors, officers, employees
 and agents, fully indemnified and harmless from and against all claims, proceedings,
