--- a/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
+++ b/src/app/client/src/app/modules/public/components/explore-thinking/explore-thinking.component.scss
@@ -24,10 +24,14 @@
   }
   li {
     line-height: 2em;
-    font-size: 14px;
+    font-size: 17px;
   }
   .text p {
     line-height: 2em;
+    font-size: 17px;
+  }
+  ul li {
+    margin-bottom: 0;
   }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
