--- a/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
+++ b/src/app/client/src/app/modules/public/components/licensepolicy/licensepolicy.component.scss
@@ -23,6 +23,9 @@
     font-family: 'Muli', sans-serif;
     line-height: 2em;
   }
+  ul li {
+    margin-bottom: 0;
+  }
   .cimage{
     background-image: url('../../../../../assets/images/slide-04.png');
     background-size: cover;
