--- a/src/app/tenant/space/css/custom.css
+++ b/src/app/tenant/space/css/custom.css
@@ -32,6 +32,7 @@ footer{text-align:center;}
 
 body{
 	font-family: 'Muli', sans-serif;
+	overflow-x: hidden;
 }
 .margint5{
 	margin-top:5px;
@@ -936,8 +937,8 @@ a:not([href]):not([tabindex]) {
 }
 #owl-demo .item img{
     display: block;
-    width: -webkit-fill-available;
-    height: 57rem;
+    width: 100%;
+    height: auto;
 }
 /* .owl-carousel .owl-item img {
 	width: unset !important;
