--- a/src/app/tenant/space/index.html
+++ b/src/app/tenant/space/index.html
@@ -122,7 +122,7 @@
 					<!-- <div class="container"> -->
 					<div class="item"><img src="images/banner_bg.jpg" alt="The Last of us">
 						<div class="slide-details text-center text-white">
-							<div class="container">
+							<div class="container-1">
 								<p class="fax"> Welcome to Societal Platform Assets Collaboration Environment</p>
 								<p class="text"> A place to search, discover and share assets including concepts, methods, processes, software, hardware and data.
 								</p>
